Fixed contrast issues

--- a/project/styles/index-desktop.css
+++ b/project/styles/index-desktop.css
@@ -107,7 +107,7 @@
 
     .hero>picture>img {
         display: block;
-        max-width: 100%;
+        width: 100%;
         height: auto;
         border-radius: 6px;
         margin: 0 auto;
